<resources>
    <string name="app_name">Nutrition Tracker</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="portionenGramm">
        <item>Servings</item>
        <item>Grams</item>
    </string-array>

    <string-array name="vielWenig">
        <item> </item>
        <item>high</item>
        <item>low</item>
    </string-array>

    <string-array name="wovon">
        <item> </item>
        <item>kcal</item>
        <item>fat</item>
        <item>carb</item>
        <item>prot</item>
    </string-array>

    <string name="entfernenButtonText"><u>remove</u></string>
    <string name="tageszieleHeadline">Today\'s Goals</string>
    <string name="ziel">goal</string>
    <string name="kcal">kcal</string>
    <string name="g_prot">g prot</string>
    <string name="g_kh">g carbs</string>
    <string name="g_fett">g fat</string>
    <string name="essen_essen_headline">Add Food</string>
    <string name="gericht_auswaehlen_button">choose food...</string>
    <string name="portionen">servings</string>
    <string name="mampf_button">Add</string>
    <string name="gerichte_hinzufuegen_und_bearbeiten_headline"><![CDATA[Add & Edit Food]]></string>
    <string name="neues_gericht_button">new food</string>
    <string name="gericht_bearbeiten_button">edit food...</string>
    <string name="name_angeben">name</string>
    <string name="beschreibung_doppelpunkt">Description:</string>
    <string name="optional">optional</string>
    <string name="loeschen_button">delete</string>
    <string name="speichern_button">save</string>
    <string name="heute_headline">Today</string>
    <string name="shrug">¯\\_(ツ)_/¯</string>
    <string name="noch_nichts_getrackt">nothing tracked yet</string>
    <string name="historie_headline">History</string>
    <string name="gegessenes_essen_headline">Eaten Food</string>
    <string name="nichts_getrackt">nothing tracked</string>
    <string name="gewicht_angeben_doppelpunkt">Enter weight:</string>
    <string name="kg">kg</string>
    <string name="date_spaceholder">13. Dec. 2019</string>
    <string name="neuer_name_doppelpunkt">new Name:</string>
    <string name="unbekanntes_gericht">unknown food</string>
    <string name="manuelle_aenderung">manual change</string>
    <string name="anderen_namen_angeben">Enter different name</string>
    <string name="mindestens_einen_naehrwert_angeben">Enter atleast one nutritional value</string>
    <string name="geloescht">deleted</string>
    <string name="gericht_bereits_gespeichert">Food already saved</string>
    <string name="namen_oder_beschreibung_aendern">Change name or description</string>
    <string name="gespeichert">saved</string>
    <string name="aenderungen_an">changes to</string>
    <string name="abbrechen_button">cancel</string>
    <string name="kein_gewicht_angegeben">No weight entered</string>
    <string name="gewicht">weight</string>
    <string name="ein_gramm">one gram</string>
    <string name="gramm">grams</string>
    <string name="zurueck_button">back</string>
    <string name="nachtraegliche_aenderung">subsequent change</string>
    <string name="benennen">rename</string>
    <string name="nur_vergangene_tage_nachbearbeitbar">Only past days are editable</string>
    <string name="eine_portion">one serving</string>
    <string name="hinzugefügt">added</string>
    <string name="tagesbilanz_vom">Summary of</string>
    <string name="keine_naehrwerte_getrackt">no nutritional values tracked</string>
    <string name="ok_button">OK</string>
    <string name="keinen_Namen_angegeben">no name entered</string>
    <string name="zu">renamed to</string>
    <string name="umbenannt"></string>
    <string name="keine_historie_fuehren">dont\'t track history</string>
    <string name="eine_woche">one week</string>
    <string name="ein_monat">one month</string>
    <string name="sechs_monate">six months</string>
    <string name="ein_jahr">one year</string>
    <string name="drei_jahre">three years</string>
    <string name="historie">History</string>
    <string name="gewicht_speichern">Save Weight</string>
    <string name="gerichte_bearbeiten"><![CDATA[Add & Edit Food]]></string>
    <string name="einstellungen">Settings</string>
    <string name="suchen">Search</string>
    <string name="kalorien_tracken">Track Calories</string>
    <string name="proteine_tracken">Track Proteins</string>
    <string name="kohlenhydrate_tracken">Track Carbohydrates</string>
    <string name="fette_tracken">Track Fats</string>
    <string name="naehrwerte_direkt_anzeigen">Directly display nutritional values</string>
    <string name="naehrwerte_direkt_anzeigen_sum_off">Nutritional values will only be shown in detailed view</string>
    <string name="naehrwerte_direkt_anzeigen_sum_on">Nutritional values will be shown directly in today\'s history</string>
    <string name="historie_begrenzen">Limit history</string>
    <string name="historie_begrenzen_sum">Old entries will be deleted to save storage space</string>
    <string name="historie_begrenzen_auf">History capped to</string>
    <string name="tracker">Tracker</string>
    <string name="gericht_auswählen">Choose Food</string>
    <string name="gerichte_bearbeiten_cond">Edit Food</string>
    <string name="kilo_gram">kilo-/grams</string>
    <string name="fett">fat</string>
    <string name="kh">carbs</string>
    <string name="prot">prot</string>
    <string name="vom">from</string>
    <string name="bis_zum">to</string>
    <string name="graph">Graphic History</string>
    <string name="kg_koerpergewicht">kg bodyweight</string>
    <string name="aufzeichnungen_loeschen">Delete records?</string>
    <string name="aufzeichnungen_loeschen_message">All records of this day will be deleted and can not be restored.</string>
    <string name="tag_geloescht">Records deleted</string>


    <string name="apfel">Apple</string>
    <string name="banane">Banana</string>
    <string name="skyr_mit_geschmack_desira">Skyr with flavor</string>
    <string name="lachs">Salmon</string>
    <string name="sojaflocken">Soy flakes</string>
    <string name="skyr_mit_sojaflocken">Skyr with soy flakes</string>
    <string name="milch">Milk</string>
    <string name="schuessel_muesli">Bowl of muesli</string>
    <string name="thunfisch">Tuna</string>

    <string name="apfel_desc">big. 200g edible</string>
    <string name="banane_desc">medium-sized. without peel 110g</string>
    <string name="skyr_mit_geschmack_desira_desc">Skyr from Desira. Average of vanilla-, raspberry- and honey flavor</string>
    <string name="lachs_desc">Stremmel-salmon</string>
    <string name="sojaflocken_desc"></string>
    <string name="skyr_mit_sojaflocken_desc">250g skyr with flavor and 75g of soy flakes</string>
    <string name="milch_desc">UHT milk. 1.5% fat</string>
    <string name="schuessel_muesli_desc">100g Seitenbacher muesli and 333ml 1.5% fat milk</string>
    <string name="thunfisch_desc"></string>


</resources>
