<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hintergrund"
    android:focusableInTouchMode="true"
    tools:context=".HistorieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="366sp"
            android:background="@drawable/rechtsmini410x354"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/heute_headline"
                android:textColor="@color/darkText"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/heuteHistorieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/nichtsGetracktLayout"
                android:layout_width="wrap_content"
                android:layout_height="290sp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18sp"
                    android:text="@string/shrug"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp"
                    android:text="@string/noch_nichts_getrackt"
                    android:textColor="@color/darkText"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350sp"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9996783C" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/historie_headline"
                android:textColor="#000"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historieRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"></androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9996783C" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.example.ernaehrungstracker.VerticalTextView
                    android:id="@+id/kiloGrammLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:gravity="bottom"
                    android:text="@string/kilo_gram"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/myGraphView"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginStart="22sp"
                    android:layout_marginEnd="4sp"
                    android:layout_marginTop="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/kiloGrammLabelText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/kcalLabelText" />

                <com.example.ernaehrungstracker.VerticalTextView
                    android:id="@+id/kcalLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:text="@string/kcal"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="20sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/toggleButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1sp"
                    android:layout_marginEnd="1sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rosa"
                    android:onClick="kcalButtonClicked"
                    android:text="@string/kcal"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/toggleButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1sp"
                    android:layout_marginEnd="1sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gelb"
                    android:onClick="fettButtonClicked"
                    android:text="@string/fett"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/toggleButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1sp"
                    android:layout_marginEnd="1sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gruen"
                    android:onClick="khButtonClicked"
                    android:text="@string/kh"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/toggleButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1sp"
                    android:layout_marginEnd="1sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/rot"
                    android:onClick="protButtonClicked"
                    android:text="@string/prot"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/toggleButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1sp"
                    android:layout_marginEnd="1sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dunkelgrau"
                    android:onClick="gewichtButtonClicked"
                    android:text="@string/gewicht"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Space
                    android:layout_width="20sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="100sp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fromText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7sp"
                    android:text="@string/vom"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/fromButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="fromButtonClicked"
                    android:textAllCaps="false"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/toText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:layout_marginEnd="7sp"
                    android:text="@string/bis_zum"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/toButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toButtonClicked"
                    android:textAllCaps="false"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>