<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hintergrund"
    android:focusableInTouchMode="true"
    tools:context=".GerichteBearbeitenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:background="@drawable/wheateckebreit"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gerichteBearbeitenHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46sp"
                android:text="@string/gerichte_hinzufuegen_und_bearbeiten_headline"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/neuesGerichtButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonDunkel"
                    android:onClick="neuesGerichtButtonClicked"
                    android:text="@string/neues_gericht_button"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="14sp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/gerichteBearbeitenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonHell"
                    android:onClick="gerichteBearbeitenButtonClicked"
                    android:text="@string/gericht_bearbeiten_button"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:autofillHints="food"
                android:backgroundTint="@color/darkText"
                android:ems="10"
                android:hint="@string/name_angeben"
                android:inputType="textPersonName"
                android:maxLength="80"
                android:textAlignment="center"
                android:textColor="@color/darkText"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/kcalNoteButton"
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:backgroundTint="@color/hintergrund"
                    android:onClick="kcalNoteButtonClicked"
                    android:tint="@color/buttonHell"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <EditText
                    android:id="@+id/gerichteBearbeitenKcalEditText"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkText"
                    android:ems="10"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/gerichteBearbeitenKcalText"
                    android:layout_width="47sp"
                    android:layout_height="wrap_content"
                    android:text="@string/kcal"
                    android:textAlignment="viewStart"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="40sp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/protNoteButton"
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:backgroundTint="@color/hintergrund"
                    android:onClick="protNoteButtonClicked"
                    android:tint="@color/buttonHell"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <EditText
                    android:id="@+id/gerichteBearbeitenProtEditText"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkText"
                    android:ems="10"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/gerichteBearbeitenProtText"
                    android:layout_width="47sp"
                    android:layout_height="wrap_content"
                    android:text="@string/g_prot"
                    android:textAlignment="viewStart"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/khNoteButton"
                    android:layout_width="25sp"
                    android:layout_height="28sp"
                    android:backgroundTint="@color/hintergrund"
                    android:onClick="khNoteButtonClicked"
                    android:tint="@color/buttonHell"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <EditText
                    android:id="@+id/gerichteBearbeitenKhEditText"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkText"
                    android:ems="10"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/gerichteBearbeitenKhText"
                    android:layout_width="47sp"
                    android:layout_height="wrap_content"
                    android:text="@string/g_kh"
                    android:textAlignment="viewStart"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="40sp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/fettNoteButton"
                    android:layout_width="28sp"
                    android:layout_height="28sp"
                    android:backgroundTint="@color/hintergrund"
                    android:onClick="fettNoteButtonClicked"
                    android:tint="@color/buttonHell"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <EditText
                    android:id="@+id/gerichteBearbeitenFettEditText"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkText"
                    android:ems="10"
                    android:hint="0"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/gerichteBearbeitenFettText"
                    android:layout_width="47sp"
                    android:layout_height="wrap_content"
                    android:text="@string/g_fett"
                    android:textAlignment="viewStart"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14sp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/gerichteBearbeitenPortionenGrammEditText"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkText"
                    android:ems="10"
                    android:hint="1"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/portionenGrammSpinner"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/mittelDarkText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="330sp"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gerichteBearbeitenBeschreibungText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:text="@string/beschreibung_doppelpunkt"
                    android:textAlignment="viewStart"
                    android:textColor="@color/mittelDarkText"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/gerichteBearbeitenBeschreibungEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkText"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/optional"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLength="140"
                    android:textAlignment="viewStart"
                    android:textColor="@color/darkText"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gerichteBearbeitenLöschenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:backgroundTint="#dcd8d1"
                    android:onClick="loeschenButtonClicked"
                    android:text="@string/loeschen_button"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonDunkel"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/gerichteBearbeitenSpeichernButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonHell"
                    android:onClick="speichernButtonClicked"
                    android:text="@string/speichern_button"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>